Egress/9.2-EgressGateway-CNN.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bin-egress-gateway
  annotations:
    networking.istio.io/service-type: ClusterIP
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: httpbin.org
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
