Egress/9.1-ServiceEntry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: bin
spec:
  hosts:
  - httpbin.org
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
